--- a/gift/h5/index.html
+++ b/gift/h5/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/assets/uni.bf927aa2.css">
+    <link rel="stylesheet" href="/gift/h5/assets/uni.221a96f6.css">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>gift-app</title>
     <!--preload-links-->
     <!--app-context-->
-    <script type="module" crossorigin src="/assets/index.9588ac03.js"></script>
-    <link rel="stylesheet" href="/assets/index.0fcd6f9a.css">
+    <script type="module" crossorigin src="/gift/h5/assets/index.18541c3e.js"></script>
+    <link rel="stylesheet" href="/gift/h5/assets/index.0fcd6f9a.css">
   </head>
   <body>
     <div id="app"><!--app-html--></div>
