--- a/performance-test-2022/index.html
+++ b/performance-test-2022/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./assets/uni.c3634e3a.css">
+    <link rel="stylesheet" href="./assets/uni.c50fa469.css">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>数组测试</title>
     <!--preload-links-->
     <!--app-context-->
-    <script type="module" crossorigin src="./assets/index.efa6eab6.js"></script>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?3a3e823c8173812db46f61dbc66825ac";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+
+    <script type="module" crossorigin src="./assets/index.45e10b73.js"></script>
     <link rel="stylesheet" href="./assets/index.b41d2414.css">
   </head>
   <body>
     <div id="app"><!--app-html--></div>
-    
+
   </body>
 </html>
